RESOLVED FIXED309618
Public visionOS 26.2 build broken (cannot find interface declaration for 'CARemoteExternalEffect')
https://bugs.webkit.org/show_bug.cgi?id=309618
Summary Public visionOS 26.2 build broken (cannot find interface declaration for 'CAR...
Abrar Rahman Protyasha
Reported 2026-03-10 16:59:16 PDT
As seen on an open source EWS run: https://ews-build.webkit.org/#/builders/153/builds/21704 ``` In file included from /Volumes/Data/worker/visionOS-26-Build-EWS/build/Source/WebKit/UIProcess/RemoteLayerTree/RemoteLayerTreeInteractionRegionLayers.mm:32: /Volumes/Data/worker/visionOS-26-Build-EWS/build/Source/WebKit/Platform/spi/visionos/RealitySystemSupportSPI.h:63:12: error: cannot find interface declaration for 'CARemoteExternalEffect' 63 | @interface CARemoteExternalEffect (RealitySystemSupport) | ^ 1 error generated. ```
Attachments
Radar WebKit Bug Importer
Comment 1 2026-03-10 16:59:21 PDT
Abrar Rahman Protyasha
Comment 2 2026-03-10 17:11:27 PDT
EWS
Comment 3 2026-03-10 18:10:28 PDT
Committed 309023@main (9de5e612fe6c): <https://commits.webkit.org/309023@main> Reviewed commits have been landed. Closing PR #60322 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.