Public visionOS 26.2 build broken (cannot find interface declaration for 'CARemoteExternalEffect') https://bugs.webkit.org/show_bug.cgi?id=309618 rdar://172231097

Unreviewed build fix.

As seen on an open source EWS run: https://ews-build.webkit.org/#/builders/153/builds/21704

```
In file included from /Volumes/Data/worker/visionOS-26-Build-EWS/build/Source/WebKit/UIProcess/RemoteLayerTree/RemoteLayerTreeInteractionRegionLayers.mm:32:
/Volumes/Data/worker/visionOS-26-Build-EWS/build/Source/WebKit/Platform/spi/visionos/RealitySystemSupportSPI.h:63:12: error: cannot find interface declaration for 'CARemoteExternalEffect'
   63 | @interface CARemoteExternalEffect (RealitySystemSupport)
      |            ^
1 error generated.
```

RealitySystemSupportSPI.h depended on a transitive include of
QuartzCoreSPI.h, which is subject to the mercy of unified sources. Let's
make this more deterministic.

* Source/WebKit/Platform/spi/visionos/RealitySystemSupportSPI.h:

Canonical link: https://commits.webkit.org/309023@main